--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 h1{
     background-color: rgba(45, 36, 83, 0.338);
-    color: beige;
+    color: black;
     height: 3.5rem;
     line-height: 3.5rem;
     font-size: 2.5rem;
